library/general/verifydeprecatedapi/samples/verify-1.22/example_disallowed.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: disallowed-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
